# obsidian-metrics

./: .gitignore  README.md  Taskfile.yml  diagram.py  go.mod  main.go  pyproject.toml
example/: Taskfile.yml  docker-compose.yml
example/alertmanager/: alertmanager.yml.tpl
example/prometheus/: alert.yml  prometheus.yml
